--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,12 +1,8 @@
-[Unit]
-Description=Gunicorn instance to serve AirBnB Clone
-After=network.target
-
-[Service]
-User=ubuntu
-Group=www-data
-WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
-ExecStart=/usr/local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log web_dynamic.2-hbnb:app
-
-[Install]
-WantedBy=multi-user.target
+[program:gunicorn]
+command=/usr/local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log web_dynamic.2-hbnb:app
+directory=/home/ubuntu/AirBnB_clone_v4
+user=ubuntu
+autostart=true
+autorestart=true
+stdout_logfile=/tmp/gunicorn_supervisor.log
+stderr_logfile=/tmp/gunicorn_supervisor_err.log
